tests/paczka1/fuzzy1/70644183.err
Error in line 7: 9zzPINId A702 84,0
Error in line 9: A649 S653 8,4
Error in line 16: 7iXp A702 26,6
Error in line 2: g5lmZWy A702 77,4
Error in line 14: R99 A488 38,6
